--- a/vignettes/dataRetrieval.Rnw
+++ b/vignettes/dataRetrieval.Rnw
@@ -160,6 +160,7 @@ bold.colHeaders <- function(x) {
   returnX <- paste("\\multicolumn{1}{c}{\\textbf{\\textsf{", x, "}}}", sep = "")
 }
 addSpace <- function(x) ifelse(x != "1", "[5pt]","")
+library(dataRetrieval)
 @
 
 \noindent{\huge\textsf{\textbf{The dataRetrieval R package}}}
@@ -306,13 +307,13 @@ print(xtable(data.df,
 
 @
 
-A complete list (as of November 7, 2014) is available as data attached to the package. It is accessed by the following:
-
-<<tableParameterCodesDataRetrieval, echo=TRUE, eval=TRUE>>=
-library(dataRetrieval)
-parameterCdFile <-  parameterCdFile
-names(parameterCdFile)
-@
+% A complete list (as of November 7, 2014) is available as data attached to the package. It is accessed by the following:
+% 
+% <<tableParameterCodesDataRetrieval, echo=TRUE, eval=TRUE>>=
+% library(dataRetrieval)
+% parameterCdFile <-  parameterCdFile
+% names(parameterCdFile)
+% @
 
 Two output columns that may not be obvious are \enquote{srsname} and \enquote{casrn}. Srsname stands for \enquote{Substance Registry Services}. More information on the srs name can be found here:
 
