--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dataRetrieval 2.0.2
+===========
+* Moved data files (parameterCdFile and pCodeToName) to hidden sysdata.rda
+* 
+
 dataRetrieval 2.0.1
 ===========
 * Removed deprecated functions.
