Add some news about next release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+dataRetrieval 2.1.1
+===========
+* Removed tests that call external web services, server upgrades have been causing false negative results
+* Added functionality to readWQPdata to allow R objects as arguments rather than just character strings
+
+
 dataRetrieval 2.0.2
 ===========
 * Moved data files (parameterCdFile and pCodeToName) to hidden sysdata.rda
