--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+dataRetrieval 2.1.4
+===========
+* Expanded readNWISdata to qw data
+* Improved citation file
+
+
 dataRetrieval 2.1.1
 ===========
 * Removed tests that call external web services, server upgrades have been causing false negative results
