--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+dataRetrieval 2.3.0
+===========
+* Converted all Water Quality Portal queries to sorted=no to greatly improve retrieval times
+* Converted gwlevels in readNWISdata to rdb
+
+
 dataRetrieval 2.2.0
 ===========
 * Changed the output of tz_cd (in all *NWIS functions) to the timezone that is reported in the data frame. Before this version, it was the time zone reported by NWIS. This was confusing however since the dateTime columns default to UTC.
